styles/belgica.css
body {
  margin: 0;
}

p {
  color: white;
}

button {
  /* margin-bottom: 20px;
      margin-right: 20px; */
  background-color: #76bbf4;
  border: none;
  font-family: Roboto;
  font-size: 12px;
  color: white;
  padding: 8px 5px 5px 10px;
  text-transform: uppercase;
}

button::after {
  content: url("../images/chevron.png");
  padding-left: 14px;
  padding-right: 2px;
}

h2.helper {
  margin: 0;
  color: red;
  position: absolute;
  font-size: 14px;
  /* visibility: hidden; */
  /* display: none; */
}

/* banner styles */

.banner {
  background-image: url("../images/banner-belgica.png");
  background-position: center; /* Center the image */
  background-repeat: no-repeat; /* Do not repeat the image */
  background-size: cover; /* Resize the background image to cover the entire container */
  min-height: 438px;
  background-color: #04529c;
}

.banner > .flex-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  min-height: 500px;
}

@media only screen and (min-width: 600px) {
  .banner > .flex-container {
    padding: 0 50px !important;
    justify-content: space-between;
  }
}

.banner > .flex-container > .around {
  padding-bottom: 20px;
}

.banner > .flex-container > .around > a.botonflecha > img {
  position: absolute;
  transform: translate(250px, -83px);
}

.banner > .flex-container > .tiempos {
  color: white;
  font-family: RobotoRegular;
  font-size: 12px;
  text-align: center;
  line-height: 24px;
  text-transform: uppercase;
}

.banner > .flex-container > .tiempos > p {
  margin: 0;
  text-shadow: 1px 1px 2px #117396, 0 0 1em #ffffff, 0 0 0.2em #117396;
  font-size: 16px;
  line-height: 2.5rem;
}

@media only screen and (min-width: 768px) {
  .banner > .flex-container > .tiempos {
    margin-top: 80px;
  }
}

.banner > .flex-container > .tickets {
    width: 350px;
  text-align: center;
}

.banner > .flex-container > .tickets > p {
  text-align: left;
  font-family: Robotoregular;
  font-size: 14px;
}

.banner > .flex-container > .tickets > .button-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  align-content: center;
}

@media only screen and (max-width: 600px) {
  .banner > .flex-container > .tickets > .button-container {
    margin-bottom: 20px;
  }
}

.banner > .flex-container > .tickets > .button-container > button {
  width: 100px;
}

/* 
  @media only screen and (min-width: 768px) {
    .banner > .flex-container > .tickets {
      padding-top: 187px;
    }
  } */

p.around-1 {
  font-family: titlingbold;
  font-size: 48px;
  max-width: 215px;
  line-height: 3.5rem;
  margin: 0;
  margin-top: 2px;
}

p.around-2,
p.around-3 {
  font-family: titlingstand;
  font-size: 24px;
  margin: 0;
}

p.around-3 {
  color: #76bbf4;
}

.section2 {
  background-image: url("../images/section2.jpg");
  background-position: 50% 0%; /* Center the image */
  background-repeat: no-repeat; /* Do not repeat the image */
  background-size: cover; /* Resize the background image to cover the entire container */
  min-height: 627px;
  background-color: #141414;
}

.section2 > .tomo {
  padding-top: 415px;
}

.section2 > .tomo > h2.tomorrow {
  font-family: "Roboto";
  font-size: 48px;
  color: white;
  text-align: center;
  margin-bottom: 0;
}

@media only screen and (max-width: 600px) {
  .section2 > .tomo > h2.tomorrow {
    font-size: 2rem;
  }
}

.section2 > .tomo > h2.after {
  font-family: "titlingstand";
  font-size: 48px;
  color: #76bbf4;
  text-align: center;
  /* margin-left: 50px; */
}

.section2 > .tomo > h2.after::after {
  content: "";
  content: url("../images/aftermovie.png");
  padding: 0px 0px 0px 10px;

  display: inline-block;
  transform: translate(0px, 6px);
  /* width: 10px; 
    height: 128px;
    transform: scale(.8); */
}

.section2 > .tomo > ul.vive {
  font-family: titlinglight;
  font-size: 36px;
  color: white;
  list-style-type: none;
  padding: 0;
  margin-bottom: 0;
  text-align: center;
}

.section2 > .tomo > ul.vive > li {
  display: inline-block;
}

.section2 > .tomo > ul.vive > li::after {
  content: "";
  content: url("../images/vertical-line.png");
  padding: 0px 0px 0px 4px;
  display: inline-block;
  transform: translate(0px, 6px);
}
.section2 > .tomo > ul.vive > :last-child::after {
  content: "";
  padding: 0;
}











.section4 {
    border: none;
    /*background-image: url("../images/section4.jpg");*/
    background-color: #141414;
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
    /* min-height: 218px; */
    background-color: #141414;
  }
  
  .section4 > div {
    padding-bottom: 5px;
  }
  
  .section4 > div.logo {
      border: none;
    text-align: center;
  }
  
  .section4 > .favicons > ul {
    list-style-type: none;
    padding: 0;
    margin-bottom: 0;
    text-align: center;
  }
  
  .section4 > .favicons > ul > li {
    display: inline-block;
  }
  
  .section4 > .copyleft {
    text-align: center;
    font-family: robotolight;
    font-size: 20px;
  }
  
  .section4 > .dummy-radio {
    padding: 0;
    margin: 0;
    text-align: center;
    background-color: #1669df;
  }
  
  .section4 > .dummy-radio > a > img {
    display: inline-block;
    width: 100%;
  }

